Text documentation updates; Literal alias for UnicodeScalarView
Also update Jazzy and git-attributes configuration.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-/.jazzy-docs/** linguist-generated
-Documentation/** linguist-documentation linguist-language=markdown
+/♪♫/** linguist-generated
+Sources/Documentation/** linguist-documentation linguist-language=markdown
